# LLM-Hallucinations-with-Explainability

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/llm_hallucination/: crew.py  main.py  qwen_instrumented.py
src/llm_hallucination/config/: agents.yaml  tasks.yaml
src/llm_hallucination/tools/: qwen_trace_tool.py
tests/: manual_test_qwen.py
