[project]
name = "llm_hallucination"
version = "0.1.0"
description = "llm_hallucination using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "ollama",
    "litellm"
]

[project.scripts]
llm_hallucination = "llm_hallucination.main:run"
run_crew = "llm_hallucination.main:run"
train = "llm_hallucination.main:train"
replay = "llm_hallucination.main:replay"
test = "llm_hallucination.main:test"
run_with_trigger = "llm_hallucination.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
